--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Colin Misare
 dequis <dx@dxzone.com.ar>
 Gabriel Russell <gabriel.russell@mongodb.com>
 Giulio <programmatore@ditieri.it>
+Huw Jones <huw@pexip.com>
 Jakob Unterwurzacher <jakobunt@gmail.com>
 Juuso Haavisto <juuso@mail.com>
 kujenga <ataylor0123@gmail.com>
